Bestseller Cupcakes Update

--- a/styles.css
+++ b/styles.css
@@ -416,3 +416,104 @@ img {
   width: 100%;
   height: 100%;
 }
+
+h2 {
+  font-size: 35px;
+  text-align: center;
+  font-family: "Inter-Regular", Helvetica;
+  padding: 15px;
+}
+
+.bestseller-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly; /* Add this line to distribute cupcakes equally */
+}
+
+.inside-image {
+  width: 281px;
+  height: 183px;
+  padding-bottom: 1px;
+  overflow: hidden; /* Ensure the border-radius is applied */
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  /* Add styling for your image, e.g., background-image, background-size, etc. */
+}
+
+.inside-image {
+  position: relative;
+}
+
+.rating {
+  position: absolute;
+  top: 10px; /* Adjust the top value to position it properly */
+  right: 10px; /* Adjust the right value to position it properly */
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+
+.star-icon {
+  font-size: 20px; /* Adjust the font size as needed */
+  font-weight: 600;
+  margin-left: 5px; /* Add some space between the star and the rating text */
+  color: gold;
+}
+
+.rating-text {
+  font-family: "Inter-Regular", Helvetica;
+  font-weight: 600;
+  font-size: 16px; /* Adjust the font size as needed */
+}
+
+.bestseller-cupcake {
+  display: flex;
+  width: 280px;
+  height: 400px;
+  background-color: #ffffff;
+  border-radius: 25px;
+  box-shadow: 0px 4px 4px #f9bec2;
+  flex-direction: column;
+  margin: 30px;
+}
+
+.inside-cupcake {
+  display: flex;
+  flex-direction: column;
+  border-radius: 25px;
+}
+
+.inside-cupcake ul {
+  list-style: none; /* Remove list-style (bullet points) */
+  padding-left: 15px; /* Remove default padding for the list */
+}
+
+.inside-cupcake li {
+  font-family: "Inter-Regular", Helvetica;
+  font-weight: 400;
+  color: #59322c;
+  font-size: 20px;
+}
+
+.order-box {
+  width: 154px;
+  height: 53px;
+  padding-left: 10px;
+}
+.order-box .order-now-rectangle {
+  width: 154px;
+  height: 53px;
+  background-color: #f9bec2;
+  border-radius: 100px;
+  box-shadow: 0px 4px 4px #0000001a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.order-now {
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
