--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,10 @@
+.custom-container {
+  display: column;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 10px;
+}
+
 .container {
   text-align: center;
   margin-bottom: 20px;
@@ -132,4 +139,46 @@
   margin: 20px;
   text-align: center;
   font-weight: 500;
+}
+
+@media screen and (max-width: 480px) {
+  .custom-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  .block {
+    width: 100%;
+  }
+
+  .block .rectangle h3 {
+    font-size: 15px;
+  }
+
+  .button-box,
+  .description-form,
+  .file-import,
+  .submit-button {
+    max-width: 100%;
+  }
+
+  .button-row-size,
+  .button-row-frosting,
+  .button-row-toppers {
+    flex-direction: column;
+  }
+
+  .button-row-size button,
+  .button-row-frosting button,
+  .button-row-toppers button {
+    width: 100%;
+  }
+
+  .like-heading {
+    margin: 20px 10px;
+  }
 }
