--- a/aboutUs.css
+++ b/aboutUs.css
@@ -23,3 +23,15 @@ h1 {
 .owner-image {
   width: 35%;
 }
+
+@media screen and (max-width: 480px) {
+  .aboutUs-box {
+    flex-direction: column;
+  }
+  .aboutUs-text {
+    font-size: 16px;
+  }
+  .owner-image {
+    width: 100%;
+  }
+}
