--- a/styles.css
+++ b/styles.css
@@ -365,7 +365,7 @@ template {
   top: 0%;
   width: 100%;
   height: 100vh;
-  background-color: #2b2d42;
+  background-color: white;
   transition: 1s;
 }
 
@@ -374,7 +374,7 @@ template {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #d9dcd6;
+  color: pink;
 }
 
 .intro-logo {
